--- a/index.html
+++ b/index.html
@@ -4,13 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shut the box</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>Shut the box</h1>
     <hr>
     <button>roll</button>
-    <div id="die"></div>
-    <script src="main.js"></script>
+    <br>
+    <div id="dice-area">
+        <div id="die1" class="die"></div>
+        <div id="die2" class="die"></div>
+    </div>
+    <div id="number-row">
+        <div class="open-tile">1</div>
+        <div class="open-tile">2</div>
+        <div class="open-tile">3</div>
+        <div class="open-tile">4</div>
+        <div class="open-tile">5</div>
+        <div class="open-tile">6</div>
+        <div class="open-tile">7</div>
+        <div class="open-tile">8</div>
+        <div class="open-tile">9</div>
+    </div>
+    <script src="js/main.js"></script>
 </body>
 </html>
