--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Shut the box</h1>
     <hr>
-    <button onclick="rollDice()">roll</button>
+    <button id="roll-btn">roll</button>
     <br>
     <div id="dice-area">
     </div>
@@ -17,7 +17,7 @@
     <div id="tiles">
     </div>
 
-    <button onclick="attemptShutSelected()">shut</button>
+    <button id="shut-btn" disabled>shut</button>
 
     <div id="message-display"></div>
 
