--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Shut the box</h1>
     <hr>
+    <div id="score-disp"></div>
     <button id="roll-btn">roll</button>
     <br>
     <div id="dice-area">
