message now disappears after 3 seconds

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <button id="shut-btn" disabled>shut</button>
 
-    <div id="message-display"></div>
+    <div id="message-area"></div>
 
     <script src="js/die.js"></script>
     <script src="js/game.js"></script>
