--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Shut the box</h1>
     <hr>
     <div id="score-disp"></div>
-    <button id="roll-btn">roll</button>
+    <button id="roll-btn" class="btn">roll</button>
     <br>
     <div id="dice-area">
     </div>
@@ -18,7 +18,7 @@
     <div id="tiles">
     </div>
 
-    <button id="shut-btn" disabled>shut</button>
+    <button id="shut-btn" class="btn" disabled>shut</button>
 
     <div id="message-area"></div>
 
