added restart button

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Shut the box</h1>
+    <div id="title">Shut the box</div>
+    <button id="restart-btn" onclick="initGame()" class="btn">new game</button>
     <hr>
     <div id="score-disp"></div>
     <button id="roll-btn" class="btn">roll</button>
