--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <div id="score-disp"></div>
     <button id="roll-btn" class="btn">roll</button>
     <br>
-    <div id="dice-area">
-    </div>
+    <div id="dice-area"></div>
 
     <div id="tiles">
     </div>
@@ -23,7 +22,6 @@
 
     <div id="message-area"></div>
 
-    <script src="js/die.js"></script>
     <script src="js/game.js"></script>
     <script src="js/main.js"></script>
 </body>
